2002-07-30  Daniel Jacobowitz  <drow@mvista.com>

	Merge from mainline:
	2002-07-30  Nick Clifton  <nickc@redhat.com>
	* po/sv.po: Updated Swedish translation.

	2002-07-30  Jakub Jelinek  <jakub@redhat.com>
	* elf.c (elf_fake_sections): Fix up .tbss sh_size and sh_type.

	2002-07-26  Chris Demetriou  <cgd@broadcom.com>
	* elfxx-mips.c (_bfd_mips_elf_merge_private_bfd_data): Merge ASE
	flags into resulting BFD.

	2002-07-25  Alan Modra  <amodra@bigpond.net.au>
	* elf-bfd.h (_bfd_elf32_link_record_local_dynamic_symbol): Define
	as elf_link_record_local_dynamic_symbol.
	(_bfd_elf64_link_record_local_dynamic_symbol): Likewise.
	(elf_link_record_local_dynamic_symbol): Declare.  Now returns int.
	* elflink.h (elf_link_record_local_dynamic_symbol): Move to..
	* elflink.c: .. here.  Use bfd_elf_get_elf_syms.  Check whether an
	attempt is made to record a symbol in a discarded section, and
	return `2' in that case.

2002-07-26  Alan Modra  <amodra@bigpond.net.au>

	From John Reiser <jreiser@BitWagon.com>
	* elf32-i386.c (elf_i386_link_hash_table_create): Clear
	tls_ldm_got.refcount.

2002-07-25  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.
	* po/es.po: Updated Spanish translation.
	* po/fr.po: Updated French translation.

2002-07-24  Nick Clifton  <nickc@redhat.com>

	* po/sv.po: Updated Swedish translation.
	* po/es.po: Updates Spanish translation.

2002-07-23  Daniel Jacobowitz  <drow@mvista.com>

	* configure.in: Bump version for snapshot.
	* configure: Regenerated.

2002-07-23  Daniel Jacobowitz  <drow@mvista.com>

	* po/bfd.pot: Regenerated.

2002-07-23  Nick Clifton  <nickc@redhat.com>

	* elf-bfd.h (struct elf_backend_data): Add new bitfield
	'want_p_paddr_set_to_zero'.
	* elfxx-target.h: Set default value for want_p_paddr_set_to_zero
	to false;
	* elfxx-ia64.c: Set want_p_paddr_set_zero for HPUX target.
	* elf.c (copy_private_bfd_data): Test want_p_paddr_set_zero.

2002-07-23  Gabor Keresztfalvi  <keresztg@mail.com>
